Fixed the issue with the directory, small css tweaks to the directory. Moved the side menu above filters on the two dir view pages. And wrapped up the newsletter code. '

--- a/assets/sass/partials/design/views/_directory.scss
+++ b/assets/sass/partials/design/views/_directory.scss
@@ -3,6 +3,9 @@
   padding: 1em;
   border-radius: 3px;
   margin-bottom: 2em;
+  h3 {
+      font-size: 1.3em;
+  }
   @include breakpoint($phone-lg2, $no-query: '.no-mq') {
     //@include grid-span(3,10);
   }
